--- a/templates/home.html
+++ b/templates/home.html
@@ -1,33 +1,9 @@
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en"> 
+{% load static %}
+ {% block content %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-  
-  {% load static %}
-  <!-- Bootstrap CSS -->
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-  <title> curaMED</title>
-
-
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
-</head>
-<nav class="navbar navbar-light">
-  <a class="navbar-brand" href="#">
-    <img src="/static/images/favicon.ico" width="30" height="30" alt="" loading="lazy">curaMED
-  
-  </a>
-</nav> 
-<body> 
-{% block content %}
-
- 
+ <br>
 <h3>Willkommen bei curaMED</h3>
 
 <div class="card-deck" style="width:auto">
@@ -66,5 +42,4 @@
 
  
 {% endblock %}
-</body>
-</html>
+ 
