--- a/templates/patient/patient_delete.html
+++ b/templates/patient/patient_delete.html
@@ -1,40 +1,46 @@
-
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block content %}
+<br>
 <h2>Patient entfernen</h2>
 <br>
 <form method='POST'> {% csrf_token %}
-    <h4> Möchten Sie den Patienten {{ object.first_name}} {{ object.second_name }} entfernen?</h4>
-        <div class="card border-info mb-3 w-100" >
-            <div class="card-body">
-            <div class="container">
-              <div class="row">
-                <div class = "card w-2 border-0">
-                <div class="col">
-                  <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
-                </div>
-              </div>
-              <div class="col-15">
-                <h5 class="card-title">{{object.first_name}} {{ object.second_name}}</h5>
-              </div>
-              </div>
+  <h4> Möchten Sie den Patienten {{ object.first_name}} {{ object.second_name }} entfernen?</h4>
+  <div class="card border-info mb-3 w-100">
+    <div class="card-body">
+      <div class="container">
+        <div class="row">
+          <div class="card w-2 border-0">
+            <div class="col">
+
+              {% if instance.title == "male" %}
+              <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
+              {% else %}
+              <img src="/static/images/marilyn_monroe.png" class="card-img-top" width="55" height="45">
+              {% endif %}
             </div>
-            
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"> {{ object.get_title_display }} {{ object.first_name }} {{ object.second_name }}</li>
-                  <li class="list-group-item">Geburtstag: {{ object.birthdate }}</li>
-                  <li class="list-group-item">Adresse: {{ object.address }}, {{ object.number }}</li>
-                  <li class="list-group-item">Ort: {{ object.city }}, {{ object.code }}</li>
-                  <li class="list-group-item">Sprache: {{ object.language }}</li>
-                  
-        
-                </ul>  
-              <input type='submit' class="btn btn-outline-primary" value ='Ja'/>
-    <a href="{% url 'patients' %}" class="btn btn-outline-primary">Nein</a>
- 
-              </div>
-            </div>
-    
+          </div>
+          <div class="col-15">
+            <h5 class="card-title">{{object.first_name}} {{ object.second_name}}</h5>
+          </div>
+        </div>
+      </div>
+
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"> {{ object.get_title_display }} {{ object.first_name }} {{ object.second_name }}
+        </li>
+        <li class="list-group-item">Geburtstag: {{ object.birthdate }}</li>
+        <li class="list-group-item">Adresse: {{ object.address }}, {{ object.number }}</li>
+        <li class="list-group-item">Ort: {{ object.city }}, {{ object.code }}</li>
+        <li class="list-group-item">Sprache: {{ object.language }}</li>
+
+
+      </ul>
+      <input type='submit' class="btn btn-outline-primary" value='Ja' />
+      <a href="{% url 'patients' %}" class="btn btn-outline-primary">Nein</a>
+
+    </div>
+  </div>
+
 </form>
 {% endblock %}
