curamed connection to curapacs v1. allerts for connectivity

--- a/templates/administration/detail.html
+++ b/templates/administration/detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <br>
-<h2>Addresse</h2>
+<h2>Standort bearbeiten</h2>
 <form action='.' method='POST'> 
     {% csrf_token %} 
     <div class="card border-info mb-3 w-75">
